# rust-sample

./: .gitignore  Cargo.toml  Commands.md  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
scripts/: publish.sh
src/: lib.rs  main.rs
