[package]
name = "rust_sample_calc_cazofeifa"
version = "0.0.1"
edition = "2024"
authors = ["cazofeifacr"]
description = "A simple Rust project with unit tests"
documentation = "https://docs.rs/rust-sample-calculator"
homepage = "https://github.com/cazofeifacr/rust-sample"
repository = "https://github.com/cazofeifacr/rust-sample"
readme = "README.md"
license = "MIT"
keywords = ["calculator", "arithmetic", "sample"]
categories = ["algorithms"]

exclude = [
    ".github/*",
    "*.tar.gz",
    "Commands.md"
]

[dependencies]

[dev-dependencies]

[[bin]]
name = "rust-sample"
path = "src/main.rs"
